test/regress/cov3-amount-bad-apostrophe.test
; Test error when apostrophe is incorrectly placed
; Covers amount.cc line 1279 (incorrect use of thousand-mark apostrophe)

2024/01/01 Test
    Expenses:Food    CHF 1'23.45
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Food    CHF 1'23.45
                   ^^^^^^^^^^^
Error: Incorrect use of thousand-mark apostrophe
end test
